NLP TP/texts/robotics/robotics.stackexchange_0000061219.txt
Q:

Another problem with installing packages on Mac OS X

Hi,
This time, the problem is with building hector_pose_estimation_core package:
-- Build files have been written to: /Volumes/Data/ZProjects/ROS/catkin_ws/build_isolated/hector_pose_estimation_core
==> make -j2 -l2 in '/Volumes/Data/ZProjects/ROS/catkin_ws/build_isolated/hector_pose_estimation_core'
Scanning dependencies of target hector_pose_estimation
[  4%] Building CXX object CMakeFiles/hector_pose_estimation.dir/src/global_reference.cpp.o
In file included from /Volumes/Data/ZProjects/ROS/catkin_ws/src/hector_localization/hector_localization/hector_pose_estimation_core/src/global_reference.cpp:29:
In file included from /Volumes/Data/ZProjects/ROS/catkin_ws/src/hector_localization/hector_localization/hector_pose_estimation_core/include/hector_pose_estimation/global_reference.h:32:
In file included from /Volumes/Data/ZProjects/ROS/catkin_ws/src/hector_localization/hector_localization/hector_pose_estimation_core/include/hector_pose_estimation/types.h:32:
/Volumes/Data/ZProjects/ROS/catkin_ws/src/hector_localization/hector_localization/hector_pose_estimation_core/include/hector_pose_estimation/matrix.h:80:5: error:
      no template named 'DenseBase'; did you mean 'Eigen::DenseBase'?
    EIGEN_INHERIT_ASSIGNMENT_EQUAL_OPERATOR(Derived)
    ^
/usr/local/Cellar/eigen/3.2.1/include/eigen3/Eigen/src/Core/util/Macros.h:316:48: note:
      expanded from macro 'EIGEN_INHERIT_ASSIGNMENT_EQUAL_OPERATOR'
  EIGEN_STRONG_INLINE Derived& operator=(const DenseBase<OtherDerived>& ...
                                               ^
/usr/local/Cellar/eigen/3.2.1/include/eigen3/Eigen/src/Core/DenseBase.h:41:34: note:
      'Eigen::DenseBase' declared here
template<typename Derived> class DenseBase
                                 ^
In file included from /Volumes/Data/ZProjects/ROS/catkin_ws/src/hector_localization/hector_localization/hector_pose_estimation_core/src/global_reference.cpp:29:
In file included from /Volumes/Data/ZProjects/ROS/catkin_ws/src/hector_localization/hector_localization/hector_pose_estimation_core/include/hector_pose_estimation/global_reference.h:32:
In file included from /Volumes/Data/ZProjects/ROS/catkin_ws/src/hector_localization/hector_localization/hector_pose_estimation_core/include/hector_pose_estimation/types.h:32:
/Volumes/Data/ZProjects/ROS/catkin_ws/src/hector_localization/hector_localization/hector_pose_estimation_core/include/hector_pose_estimation/matrix.h:101:5: error:
      no template named 'DenseBase'; did you mean 'Eigen::DenseBase'?
    EIGEN_INHERIT_ASSIGNMENT_EQUAL_OPERATOR(Derived)
    ^
/usr/local/Cellar/eigen/3.2.1/include/eigen3/Eigen/src/Core/util/Macros.h:316:48: note:
      expanded from macro 'EIGEN_INHERIT_ASSIGNMENT_EQUAL_OPERATOR'
  EIGEN_STRONG_INLINE Derived& operator=(const DenseBase<OtherDerived>& ...
                                               ^
/usr/local/Cellar/eigen/3.2.1/include/eigen3/Eigen/src/Core/DenseBase.h:41:34: note:
      'Eigen::DenseBase' declared here
template<typename Derived> class DenseBase
                                 ^
In file included from /Volumes/Data/ZProjects/ROS/catkin_ws/src/hector_localization/hector_localization/hector_pose_estimation_core/src/global_reference.cpp:29:
In file included from /Volumes/Data/ZProjects/ROS/catkin_ws/src/hector_localization/hector_localization/hector_pose_estimation_core/include/hector_pose_estimation/global_reference.h:32:
In file included from /Volumes/Data/ZProjects/ROS/catkin_ws/src/hector_localization/hector_localization/hector_pose_estimation_core/include/hector_pose_estimation/types.h:32:
/Volumes/Data/ZProjects/ROS/catkin_ws/src/hector_localization/hector_localization/hector_pose_estimation_core/include/hector_pose_estimation/matrix.h:121:5: error:
      no template named 'DenseBase'; did you mean 'Eigen::DenseBase'?
    EIGEN_INHERIT_ASSIGNMENT_EQUAL_OPERATOR(Derived)
    ^
/usr/local/Cellar/eigen/3.2.1/include/eigen3/Eigen/src/Core/util/Macros.h:316:48: note:
      expanded from macro 'EIGEN_INHERIT_ASSIGNMENT_EQUAL_OPERATOR'
  EIGEN_STRONG_INLINE Derived& operator=(const DenseBase<OtherDerived>& ...
                                               ^
/usr/local/Cellar/eigen/3.2.1/include/eigen3/Eigen/src/Core/DenseBase.h:41:34: note:
      'Eigen::DenseBase' declared here
template<typename Derived> class DenseBase
                                 ^
In file included from /Volumes/Data/ZProjects/ROS/catkin_ws/src/hector_localization/hector_localization/hector_pose_estimation_core/src/global_reference.cpp:29:
In file included from /Volumes/Data/ZProjects/ROS/catkin_ws/src/hector_localization/hector_localization/hector_pose_estimation_core/include/hector_pose_estimation/global_reference.h:32:
In file included from /Volumes/Data/ZProjects/ROS/catkin_ws/src/hector_localization/hector_localization/hector_pose_estimation_core/include/hector_pose_estimation/types.h:32:
/Volumes/Data/ZProjects/ROS/catkin_ws/src/hector_localization/hector_localization/hector_pose_estimation_core/include/hector_pose_estimation/matrix.h:287:13: warning:
      'typename' occurs outside of a template [-Wc++11-extensions]
    typedef typename Storage::Base Base;
            ^~~~~~~~~
/Volumes/Data/ZProjects/ROS/catkin_ws/src/hector_localization/hector_localization/hector_pose_estimation_core/include/hector_pose_estimation/matrix.h:288:36: warning:
      'typename' occurs outside of a template [-Wc++11-extensions]
    typedef Eigen::SelfAdjointView<typename Storage::Base,Upper> SelfAdj...
                                   ^~~~~~~~~
/Volumes/Data/ZProjects/ROS/catkin_ws/src/hector_localization/hector_localization/hector_pose_estimation_core/include/hector_pose_estimation/matrix.h:289:13: warning:
      'typename' occurs outside of a template [-Wc++11-extensions]
    typedef typename Eigen::internal::traits<Base>::Scalar Scalar;
            ^~~~~~~~~
/Volumes/Data/ZProjects/ROS/catkin_ws/src/hector_localization/hector_localization/hector_pose_estimation_core/include/hector_pose_estimation/matrix.h:290:13: warning:
      'typename' occurs outside of a template [-Wc++11-extensions]
    typedef typename Eigen::internal::traits<Base>::Index Index;
            ^~~~~~~~~
/Volumes/Data/ZProjects/ROS/catkin_ws/src/hector_localization/hector_localization/hector_pose_estimation_core/src/global_reference.cpp:89:3: error:
      use of undeclared identifier 'sincos'; did you mean '__sincos'?
  sincos(heading_.value, &heading_.sin, &heading_.cos);
  ^~~~~~
  __sincos
/usr/include/math.h:647:29: note: '__sincos' declared here
__header_always_inline void __sincos(double __x, double *__sinp, double ...
                            ^
4 warnings and 4 errors generated.
make[2]: *** [CMakeFiles/hector_pose_estimation.dir/src/global_reference.cpp.o] Error 1
make[1]: *** [CMakeFiles/hector_pose_estimation.dir/all] Error 2
make: *** [all] Error 2
make: INTERNAL: Exiting with 3 jobserver tokens available; should be 2!
<== Failed to process package 'hector_pose_estimation_core':
  Command '/Volumes/Data/ZProjects/ROS/catkin_ws/install_isolated/env.sh make -j2 -l2' returned non-zero exit status 2

Any comments greatly appreciated.
--Rasit

Originally posted by Rasit on ROS Answers with karma: 25 on 2014-07-28
Post score: 1

A:

You'll probably have to go through theses errors one by one. Maybe open an issue at https://github.com/tu-darmstadt-ros-pkg/hector_localization and ask for help if you are stuck.
To debug, it helps to run (fill in your proper parameter for ...):
VERBOSE=1 ./src/catkin/bin/catkin_make_isolated ... --pkg hector_pose_estimation_core -j1

Originally posted by demmeln with karma: 4306 on 2014-07-28
This answer was ACCEPTED on the original site
Post score: 1

Original comments
Comment by Rasit on 2014-07-28:
Thanks. I did open an issue.
And your suggestion helps... I was waiting for all the previous (227) packages to build before hitting the error;-(
Comment by demmeln on 2014-07-28:
I further suggest to you to separate the core ROS install from additional packages like hector_.... Build a workspace with desktop_full, maybe even install into /opt/ros/hydro if you like, and then build additional packages in a new WS on top of that.
Comment by Rasit on 2014-07-28:
Good idea!... Doing it now, while waiting for suggestions from hector people.
Comment by Rasit on 2014-07-30:
Can I send an email for some specific questions?
Comment by demmeln on 2014-07-30:
It would better to update your question here in this forum with more details and specific questions. That way others can jump into the discussion and benefit from the outcome. Use pastebin.com for longer build output to keep the question concise enough.

